--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
-$light-color: #EEEEEE;
+$light-color: #eeeeee;
 $dark-color: #141412;
 
 $dark-primary-color: #134457;
 $primary-color: #247899;
 
-$secondary-color: #DAD090;
-$light-secondary-color: #FCF8B0;
+$secondary-color: #dad090;
+$light-secondary-color: #fcf8b0;
