--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,289 +1,290 @@
 @import "../../../styles/variables.scss";
 
 :host {
-		background-color: $dark-color;
+	background-color: $dark-color;
 
-		.bigfooter-infos {
-			display: flex;
-			height: 250px;
-			border-top: 1px solid $secondary-color;
+	.bigfooter-infos {
+		display: flex;
+		height: 250px;
+		border-top: 1px solid $secondary-color;
 
-			@media screen and (max-width: 700px) {
-				height: auto;
-    		flex-direction: column;
-			}
-
-			.bigfooter-left {
-				display: flex;
-				width: 50%;
-				margin: auto 0;
-
-				@media screen and (max-width: 700px) {
-					height: 200px;
-    			width: 100%;
-				}
-
-				.bigfooter-container {
-					width: 50%;
-					padding: 0 5%;
-					margin: auto;
-
-					img {
-						width: 100%;
-						cursor: pointer;
-					}
-
-					span {
-						color: $light-secondary-color;
-						cursor: pointer;
-
-						i {
-							transition: 0.5s;
-							width: 0px;
-							margin-right: 0;
-							transform: scaleX(0);
-						}
-
-						&:hover i {
-							width: 16px;
-							margin-right: 4px;
-							transform: scaleX(1);
-						}
-					}
-				}
-			}
-
-			.bigfooter-right {
-				position: relative;
-				width: 50%;
-				margin: 25px 0;
-				border-left: 1px solid $secondary-color;
-
-				@media screen and (max-width: 700px) {
-					height: 100px;
-					width: 100%;
-					margin: auto;
-					border-top: 1px solid $secondary-color;
-					border-left: none;
-				}
-
-				ul {
-					display: flex;
-					position: absolute;
-					top: 50%;
-					left: 50%;
-					transform: translate(-50%, -50%);
-
-					margin: 0;
-					padding: 0;
-
-					li {
-						list-style: none;
-
-						a {
-							display: block;
-							position: relative;
-							height: 80px;
-							width: 80px;
-							margin: 0 20px;
-
-							line-height: 80px;
-							font-size: 40px;
-							text-align: center;
-							transition: 0.5s;
-
-							&:hover {
-								color: $light-secondary-color;
-							}
-
-							@media screen and (max-width: 700px) {
-								height: 40px;
-								width: 40px;
-								margin: 0 40px;
-
-								line-height: 40px;
-								font-size: 40px;
-							}
-
-							span {
-								position: absolute;
-								transition: transform 0.5s;
-								background-color: $secondary-color;
-
-								@media screen and (max-width: 700px) {
-									display: none;
-								}
-							}
-
-							span:nth-child(1), span:nth-child(3) {
-								height: 1px;
-								width: 100%;
-							}
-
-							span:nth-child(1) {
-								top: 0;
-								left: 0;
-								transform-origin: right;
-							}
-
-							&:hover span:nth-child(1) {
-								transform: scaleX(0);
-								transform-origin: left;
-								transition: transform 0.5s;
-							}
-
-							span:nth-child(3) {
-								bottom: 0;
-								right: 0;
-								transform-origin: left;
-							}
-
-							&:hover span:nth-child(3) {
-								transform: scaleX(0);
-								transform-origin: right;
-								transition: transform 0.5s;
-							}
-
-							span:nth-child(2), span:nth-child(4) {
-								height: 100%;
-								width: 1px;
-							}
-
-							span:nth-child(2) {
-								top: 0;
-								left: 0;
-								transform: scaleY(0);
-								transform-origin: bottom;
-							}
-
-							&:hover span:nth-child(2) {
-								transform: scaleY(1);
-								transform-origin: top;
-								transition: transform 0.5s;
-							}
-
-							span:nth-child(4) {
-								top: 0;
-								right: 0;
-								transform: scaleY(0);
-								transform-origin: top;
-							}
-
-							&:hover span:nth-child(4) {
-								transform: scaleY(1);
-								transform-origin: bottom;
-								transition: transform 0.5s;
-							}
-						}
-
-					}
-				}
-			}
+		@media screen and (max-width: 700px) {
+			height: auto;
+			flex-direction: column;
 		}
 
-		.bigfooter-navigation {
+		.bigfooter-left {
 			display: flex;
-			align-items: center;
-			justify-content: space-between;
-
-			height: 50px;
-			border-top: 1px solid $secondary-color;
+			width: 50%;
+			margin: auto 0;
 
 			@media screen and (max-width: 700px) {
-				flex-direction: column;
-				justify-content: normal;
-				height: 50px;
-			}
-
-			nav {
-				display: flex;
-				justify-content: space-between;
+				height: 200px;
 				width: 100%;
 			}
 
-			a {
-				display: inline-block;
-				position: relative;
-				height: 50px;
-				line-height: 50px;
-				padding: 0 20px;
-				color: $light-color;
+			.bigfooter-container {
+				width: 50%;
+				padding: 0 5%;
+				margin: auto;
 
-				&:hover {
-					color: $light-secondary-color;
+				img {
+					width: 100%;
+					cursor: pointer;
 				}
 
-				&.active {
+				span {
 					color: $light-secondary-color;
+					cursor: pointer;
+
+					i {
+						transition: 0.5s;
+						width: 0px;
+						margin-right: 0;
+						transform: scaleX(0);
+					}
+
+					&:hover i {
+						width: 16px;
+						margin-right: 4px;
+						transform: scaleX(1);
+					}
 				}
 			}
 		}
 
-    .footer-navigation {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+		.bigfooter-right {
+			position: relative;
+			width: 50%;
+			margin: 25px 0;
+			border-left: 1px solid $secondary-color;
 
-        height: 50px;
+			@media screen and (max-width: 700px) {
+				height: 100px;
+				width: 100%;
+				margin: auto;
 				border-top: 1px solid $secondary-color;
+				border-left: none;
+			}
 
-				@media screen and (max-width: 700px) {
-					flex-direction: column;
-					justify-content: normal;
-					height: 100px;
-				}
+			ul {
+				display: flex;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
 
-				a {
-          display: inline-block;
-          position: relative;
-          height: 50px;
-          line-height: 50px;
-          padding: 0 20px;
-          color: $light-color;
+				margin: 0;
+				padding: 0;
 
-          &:hover {
-            color: $light-secondary-color;
-          }
+				li {
+					list-style: none;
 
-          &.active {
-            color: $light-secondary-color;
-          }
-        }
+					a {
+						display: block;
+						position: relative;
+						height: 80px;
+						width: 80px;
+						margin: 0 20px;
 
-        .footer-section {
-          position: relative;
-					width: 250px;
+						line-height: 80px;
+						font-size: 40px;
+						text-align: center;
+						transition: 0.5s;
 
-					@media screen and (max-width: 700px) {
-						height: 50px;
+						&:hover {
+							color: $light-secondary-color;
+						}
+
+						@media screen and (max-width: 700px) {
+							height: 40px;
+							width: 40px;
+							margin: 0 40px;
+
+							line-height: 40px;
+							font-size: 40px;
+						}
+
+						span {
+							position: absolute;
+							transition: transform 0.5s;
+							background-color: $secondary-color;
+
+							@media screen and (max-width: 700px) {
+								display: none;
+							}
+						}
+
+						span:nth-child(1),
+						span:nth-child(3) {
+							height: 1px;
+							width: 100%;
+						}
+
+						span:nth-child(1) {
+							top: 0;
+							left: 0;
+							transform-origin: right;
+						}
+
+						&:hover span:nth-child(1) {
+							transform: scaleX(0);
+							transform-origin: left;
+							transition: transform 0.5s;
+						}
+
+						span:nth-child(3) {
+							bottom: 0;
+							right: 0;
+							transform-origin: left;
+						}
+
+						&:hover span:nth-child(3) {
+							transform: scaleX(0);
+							transform-origin: right;
+							transition: transform 0.5s;
+						}
+
+						span:nth-child(2),
+						span:nth-child(4) {
+							height: 100%;
+							width: 1px;
+						}
+
+						span:nth-child(2) {
+							top: 0;
+							left: 0;
+							transform: scaleY(0);
+							transform-origin: bottom;
+						}
+
+						&:hover span:nth-child(2) {
+							transform: scaleY(1);
+							transform-origin: top;
+							transition: transform 0.5s;
+						}
+
+						span:nth-child(4) {
+							top: 0;
+							right: 0;
+							transform: scaleY(0);
+							transform-origin: top;
+						}
+
+						&:hover span:nth-child(4) {
+							transform: scaleY(1);
+							transform-origin: bottom;
+							transition: transform 0.5s;
+						}
 					}
-
-          ul {
-            display: flex;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-
-            margin: 0;
-            padding: 0;
-
-            li {
-              list-style: none;
-
-              a {
-                display: block;
-                height: 40px;
-                width: 40px;
-                margin: 0 20px;
-                padding: 0;
-
-                line-height: 40px;
-                font-size: 20px;
-                text-align: center;
-              }
-            }
-          }
-        }
+				}
+			}
 		}
+	}
+
+	.bigfooter-navigation {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+		height: 50px;
+		border-top: 1px solid $secondary-color;
+
+		@media screen and (max-width: 700px) {
+			flex-direction: column;
+			justify-content: normal;
+			height: 50px;
+		}
+
+		nav {
+			display: flex;
+			justify-content: space-between;
+			width: 100%;
+		}
+
+		a {
+			display: inline-block;
+			position: relative;
+			height: 50px;
+			line-height: 50px;
+			padding: 0 20px;
+			color: $light-color;
+
+			&:hover {
+				color: $light-secondary-color;
+			}
+
+			&.active {
+				color: $light-secondary-color;
+			}
+		}
+	}
+
+	.footer-navigation {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+
+		height: 50px;
+		border-top: 1px solid $secondary-color;
+
+		@media screen and (max-width: 700px) {
+			flex-direction: column;
+			justify-content: normal;
+			height: 100px;
+		}
+
+		a {
+			display: inline-block;
+			position: relative;
+			height: 50px;
+			line-height: 50px;
+			padding: 0 20px;
+			color: $light-color;
+
+			&:hover {
+				color: $light-secondary-color;
+			}
+
+			&.active {
+				color: $light-secondary-color;
+			}
+		}
+
+		.footer-section {
+			position: relative;
+			width: 250px;
+
+			@media screen and (max-width: 700px) {
+				height: 50px;
+			}
+
+			ul {
+				display: flex;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+
+				margin: 0;
+				padding: 0;
+
+				li {
+					list-style: none;
+
+					a {
+						display: block;
+						height: 40px;
+						width: 40px;
+						margin: 0 20px;
+						padding: 0;
+
+						line-height: 40px;
+						font-size: 20px;
+						text-align: center;
+					}
+				}
+			}
+		}
+	}
 }
