--- a/src/app/pages/legacy/legacy.component.scss
+++ b/src/app/pages/legacy/legacy.component.scss
@@ -6,8 +6,15 @@
 		flex-direction: column;
 		justify-content: space-around;
 		height: 700px;
-		background-image: linear-gradient(135deg, rgba($dark-color, 1.0), rgba($dark-color, 0.75), rgba($dark-color, 0.5), rgba($primary-color, 0.5), rgba($primary-color, 0.5)),
-		url("/assets/images/home_00.png");
+		background-image: linear-gradient(
+				135deg,
+				rgba($dark-color, 1),
+				rgba($dark-color, 0.75),
+				rgba($dark-color, 0.5),
+				rgba($primary-color, 0.5),
+				rgba($primary-color, 0.5)
+			),
+			url("/assets/images/home_00.png");
 
 		.legacy-description {
 			width: 50%;
