--- a/src/app/pages/universe/population/population.component.scss
+++ b/src/app/pages/universe/population/population.component.scss
@@ -16,7 +16,7 @@
 		&::after {
 			content: "";
 			position: absolute;
-			opacity: 1.0;
+			opacity: 1;
 			top: 0;
 			left: 0;
 			bottom: 0;
@@ -25,7 +25,14 @@
 
 			background-position: center;
 			background-size: cover;
-			background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1.0)), url("/assets/images/home_01.png");
+			background-image: linear-gradient(
+					0deg,
+					rgba($dark-color, 0.8),
+					rgba($dark-color, 0.8),
+					rgba($dark-primary-color, 0.8),
+					rgba($dark-primary-color, 1)
+				),
+				url("/assets/images/home_01.png");
 		}
 
 		.population-imgs {
