--- a/src/app/components/creation-slider/creation-slider.component.html
+++ b/src/app/components/creation-slider/creation-slider.component.html
@@ -3,10 +3,13 @@
 <span class="cs-value">{{ value }}</span>
 <button [ngClass]="{'disabled': !canUp }" (click)="upValue()">+</button>
 <span class="cs-help" (click)="toogleHelp()" (mouseover)="displayHelpHover=true" (mouseout)="displayHelpHover=false">?</span>
-<select *ngIf="hasSpecialistic" (change)="speChange($event.target.value)">
-	<option *ngFor="let specialistic of listSpecialistics" value="{{ specialistic }}">{{
-			specialistic
-	}}</option>
-</select>
+<div *ngIf="hasSpecialistic" class="dropdown">
+	<select class="dropdown-select" (change)="speChange($event.target.value)">
+		<option value=""></option>
+		<option *ngFor="let specialistic of listSpecialistics" value="{{ specialistic }}">{{
+				specialistic
+		}}</option>
+	</select>
+</div>
 <input *ngIf="hasCristalSpecialistic" type="text" (change)="speChange($event.target.value)"/>
 <span *ngIf="displayHelpClick || displayHelpHover" class="cs-popup" innerHtml="{{ help }}"></span>
