Style(global): Add style for inputs and dropdown

--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -42,26 +42,26 @@
 			/>
 		</div>
 		<div class="creation-section-right">
-			<div class="creation-race-list">
-				<select (change)="changeRace($event.target)">
+			<div class="dropdown">
+				<select class="dropdown-select" (change)="changeRace($event.target)">
 					<option value="1">{{
-						"UNIVERSE.POPULATION.PEOPLE1.NAME" | translate
-					}}</option>
-					<option value="2">{{
-						"UNIVERSE.POPULATION.PEOPLE2.NAME" | translate
-					}}</option>
-					<option value="3">{{
-						"UNIVERSE.POPULATION.PEOPLE3.NAME" | translate
-					}}</option>
-					<option value="4">{{
-						"UNIVERSE.POPULATION.PEOPLE4.NAME" | translate
-					}}</option>
-					<option value="5">{{
-						"UNIVERSE.POPULATION.PEOPLE5.NAME" | translate
-					}}</option>
-					<option value="6">{{
-						"UNIVERSE.POPULATION.PEOPLE6.NAME" | translate
-					}}</option>
+							"UNIVERSE.POPULATION.PEOPLE1.NAME" | translate
+						}}</option>
+						<option value="2">{{
+							"UNIVERSE.POPULATION.PEOPLE2.NAME" | translate
+						}}</option>
+						<option value="3">{{
+							"UNIVERSE.POPULATION.PEOPLE3.NAME" | translate
+						}}</option>
+						<option value="4">{{
+							"UNIVERSE.POPULATION.PEOPLE4.NAME" | translate
+						}}</option>
+						<option value="5">{{
+							"UNIVERSE.POPULATION.PEOPLE5.NAME" | translate
+						}}</option>
+						<option value="6">{{
+							"UNIVERSE.POPULATION.PEOPLE6.NAME" | translate
+						}}</option>
 				</select>
 			</div>
 			<span class="creation-race-list">Avantages :</span><br />
