--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -111,3 +111,73 @@ img {
 ::-webkit-scrollbar-thumb:hover {
 	background: $light-secondary-color;
 }
+
+input[type="text"] {
+	position: relative;
+	overflow: hidden;
+	height: 30px;
+	border: 1px solid;
+	border-radius: 5px;
+
+	background: $dark-color;
+	border-color: $secondary-color;
+}
+
+.dropdown {
+	position: relative;
+	overflow: hidden;
+	height: 30px;
+	border: 1px solid;
+	border-radius: 5px;
+
+	background: $dark-color;
+	border-color: $secondary-color;
+}
+
+.dropdown:after {
+	content: '';
+	position: absolute;
+	z-index: 2;
+	top: 10px;
+	right: 10px;
+	width: 0;
+	height: 0;
+	border: 5px dashed;
+	border-color: $dark-color transparent;
+	pointer-events: none;
+}
+
+.dropdown:after {
+	margin-top: 2px;
+	border-bottom: none;
+	border-top-style: solid;
+	border-top-color: $secondary-color;
+}
+
+.dropdown-select {
+	position: relative;
+	width: 100%;
+	margin: 0;
+	padding: 0px 30px 0px 10px;
+	height: 30px;
+	line-height: 15px;
+	font-size: 15px;
+	border: 0;
+	border-radius: 0;
+	-webkit-appearance: none;
+	cursor: pointer;
+
+	color: white;
+	background: rgba(0, 0, 0, 0) !important;
+}
+
+.dropdown-select:focus {
+	outline: none;
+}
+
+.dropdown-select > option {
+	padding: 10px;
+	border-radius: 5px;
+	cursor: pointer;
+	background: $dark-color;
+}
