--- a/src/app/components/creation-slider/creation-slider.component.scss
+++ b/src/app/components/creation-slider/creation-slider.component.scss
@@ -19,7 +19,6 @@
 	}
 
 	.cs-name {
-		width: 250px;
 		padding-right: 20px;
 		text-align: right;
 	}
@@ -37,7 +36,7 @@
 		width: 25px;
 		height: 25px;
 		line-height: 25px;
-		margin-left: 20px;
+		margin: 0 20px;
 		text-align: center;
 		cursor: pointer;
 		border-radius: 50%;
