--- a/src/app/components/creation-slider/creation-slider.component.html
+++ b/src/app/components/creation-slider/creation-slider.component.html
@@ -1,9 +1,8 @@
 <span class="cs-name">{{ name }}</span>
-<button [ngClass]="{'disabled': !canDown }" (click)="downValue()">-</button>
+<button class="cs-button" [ngClass]="{'disabled': !canDown }" (click)="downValue()">&#8249;</button>
 <span class="cs-value">{{ value }}</span>
-<button [ngClass]="{'disabled': !canUp }" (click)="upValue()">+</button>
-<span class="cs-help" (click)="toogleHelp()" (mouseover)="displayHelpHover=true" (mouseout)="displayHelpHover=false">?</span>
-<div *ngIf="hasSpecialistic" class="dropdown">
+<button class="cs-button" [ngClass]="{'disabled': !canUp }" (click)="upValue()">&#8250;</button>
+<div *ngIf="hasSpecialistic" class="dropdown cs-spe">
 	<select class="dropdown-select" (change)="speChange($event.target.value)">
 		<option value=""></option>
 		<option *ngFor="let specialistic of listSpecialistics" value="{{ specialistic }}">{{
@@ -11,5 +10,6 @@
 		}}</option>
 	</select>
 </div>
-<input *ngIf="hasCristalSpecialistic" type="text" (change)="speChange($event.target.value)"/>
+<input class="cs-spe" *ngIf="hasCristalSpecialistic" type="text" (change)="speChange($event.target.value)"/>
+<span class="cs-help" (click)="toogleHelp()" (mouseover)="displayHelpHover=true" (mouseout)="displayHelpHover=false">?</span>
 <span *ngIf="displayHelpClick || displayHelpHover" class="cs-popup" innerHtml="{{ help }}"></span>
