--- a/src/app/components/creation-slider/creation-slider.component.scss
+++ b/src/app/components/creation-slider/creation-slider.component.scss
@@ -18,8 +18,26 @@
 		background: $dark-color;
 	}
 
+	.cs-button {
+		height: 30px;
+		width: 30px;
+		font-size: 20px;
+		line-height: 20px;
+		border-radius: 50%;
+		padding: 0;
+		border: 1px solid $light-secondary-color;
+		background: $dark-color;
+
+		&.disabled {
+			background: none;
+			border: none;
+			cursor: default;
+			color: $light-color;
+		}
+	}
+
 	.cs-name {
-		padding-right: 20px;
+		margin-right: 20px;
 		text-align: right;
 	}
 
@@ -39,8 +57,10 @@
 		margin: 0 20px;
 		text-align: center;
 		cursor: pointer;
-		border-radius: 50%;
-		border: 2px solid $light-color;
+	}
+
+	.cs-spe {
+		margin-left: 20px;
 	}
 
 }
